k8s/apps/copyparty/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: copyparty
  namespace: copyparty
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Copyparty"
    gethomepage.dev/description: "File sharing"
    gethomepage.dev/group: "tools"
    gethomepage.dev/icon: "sh-copyparty.svg"
    gethomepage.dev/href: "https://copyparty.item.fyi"
    gethomepage.dev/siteMonitor: "http://copyparty.copyparty.svc.cluster.local:3939"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=copyparty"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`copyparty.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
